# autobin

./: .gitignore  .gitmodules  LICENSE  README.md  boost.sh  make.sh  start.sh
camera/: CMakeLists.txt  make.sh
camera/include/: Console.h  client.h  config.h  tftpx.h
camera/src/: client.cpp
hardware/: CMakeLists.txt  make.sh  pirun.cpp  servo_test.cpp  wiringPiI2C.cpp  wiringPiI2C.h
hardware/include/: PCA9685.h  servo.h
hardware/src/: PCA9685.cpp  servo.cpp  test.cpp
midware/: CMakeLists.txt  midware.sh
midware/include/: midclient.h
midware/src/: midware.cpp
pca9685/: CMakeLists.txt  readme.md
pca9685/include/: PCA9685.h  servo.h
pca9685/src/: PCA9685.cpp
server/: .gitignore  index.js  package-lock.json  package.json
server/models/: recordMessage.js
server/routes/: records.js
sever/: .env  index.js  package-lock.json  package.json
sever/controllers/: records.js
sever/models/: recordMessage.js
sever/routes/: record.js  records.js
webserver/include/: BinData.h  Console.h  IdentitiedTrash.h
webserver/src/: main.cpp
